--- a/app.json
+++ b/app.json
@@ -1,4 +1,4 @@
 {
-  "name": "BudgetTracker_fresh",
-  "displayName": "BudgetTracker_fresh"
+  "name": "CwBudgetTracker",
+  "displayName": "CwBudgetTracker"
 }
