--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "BudgetTracker_fresh",
+  "name": "CwBudgetTracker",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -10,9 +10,26 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-community/datetimepicker": "^8.4.4",
+    "@react-native-community/netinfo": "^11.4.1",
+    "@react-native-firebase/app": "^23.0.0",
+    "@react-native-firebase/firestore": "^23.0.0",
+    "@react-native-firebase/storage": "^23.0.0",
+    "@react-native/new-app-screen": "0.80.2",
+    "@react-navigation/bottom-tabs": "^7.4.5",
+    "@react-navigation/native": "^7.1.17",
+    "@react-navigation/native-stack": "^7.3.25",
     "react": "19.1.0",
     "react-native": "0.80.2",
-    "@react-native/new-app-screen": "0.80.2"
+    "react-native-fs": "^2.20.0",
+    "react-native-gesture-handler": "^2.28.0",
+    "react-native-html-to-pdf": "^0.12.0",
+    "react-native-print": "^0.11.0",
+    "react-native-safe-area-context": "^5.6.0",
+    "react-native-screens": "^4.13.1",
+    "react-native-uuid": "^2.0.3",
+    "react-native-vector-icons": "^10.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -32,9 +49,11 @@
     "jest": "^29.6.3",
     "prettier": "2.8.8",
     "react-test-renderer": "19.1.0",
-    "typescript": "5.0.4"
+    "typescript": "5.0.4",
+    "@bam.tech/react-native-make": "^4.0.2"
   },
   "engines": {
     "node": ">=18"
-  }
+  },
+  "overrides": {}
 }
