--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,19 @@ yarn-error.log
 !.yarn/releases
 !.yarn/sdks
 !.yarn/versions
+
+
+# Secrets
+.env
+.env.*
+!.env.example
+*.jks
+*.p12
+*.pem
+*.key
+*.der
+*.mobileprovision
+android/app/release.keystore
+android/app/google-services.json
+ios/**/GoogleService-Info.plist
+android/gradle.properties
