--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "prettier": "2.8.8",
     "react-test-renderer": "19.1.0",
     "typescript": "5.0.4",
-    "@bam.tech/react-native-make": "^4.0.2"
+    "@react-native/gradle-plugin": "0.80.2"
   },
   "engines": {
     "node": ">=18"
