--- a/ios/CwBudgetTracker/Info.plist
+++ b/ios/CwBudgetTracker/Info.plist
@@ -41,6 +41,10 @@
 	<array>
 		<string>arm64</string>
 	</array>
+	<key>UIDeviceFamily</key>
+	<array>
+		<integer>1</integer>
+	</array>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
