--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -60,7 +60,7 @@ react {
 /**
  * Set this to true to Run Proguard on Release builds to minify the Java bytecode.
  */
-def enableProguardInReleaseBuilds = false
+def enableProguardInReleaseBuilds = true
 
 /**
  * The preferred build flavor of JavaScriptCore (JSC)
@@ -99,9 +99,8 @@ android {
         applicationId "com.cwbudgettracker"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        // TODO: Increment these for each release
-        versionCode 1
-        versionName "1.0.0"
+        versionCode 2  // Increment this for each Play Store release
+        versionName "1.1.0"  // Use semantic versioning (major.minor.patch)
     }
     signingConfigs {
         debug {
