--- a/package.json
+++ b/package.json
@@ -33,15 +33,18 @@
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/native-stack": "^7.3.25",
     "react": "19.1.0",
+    "react-i18next": "^15.7.3",
     "react-native": "0.80.2",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.28.0",
     "react-native-html-to-pdf": "^0.12.0",
+    "react-native-paper": "^5.14.5",
     "react-native-print": "^0.11.0",
     "react-native-safe-area-context": "^5.6.0",
     "react-native-screens": "^4.13.1",
     "react-native-uuid": "^2.0.3",
-    "react-native-vector-icons": "^10.3.0"
+    "react-native-vector-icons": "^10.3.0",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
